--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -5,6 +5,7 @@
     <title>Dashboard</title>
 </head>
 <body>
+<a href="/user/logout">Log out</a>
 
 <li th:each="note : ${noteList}">
     <td th:text="${'Title: ' + note.getTitle() + ' Message: ' + note.getMessage() + ' Due date: ' + note.getDueDate()}"></td>
