--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
@@ -19,10 +19,11 @@
     <input type="text" th:field="*{message}" placeholder="message">
     <input type="date" th:field="*{dueDate}" placeholder="due date">
     <input type="number" th:field="*{priority}" placeholder="priority">
-    <input type="submit" vale="add note">
+    <input type="submit" vale="add note"> <br> <br>
 
 </form>
-
-<h1 th:text="${weather.getTempDto().getTemp()}"></h1>
+<h1 th:text="${'Weather for: ' + city}"></h1>
+<h1 th:text="${'Temp: ' + weather.getTempDto().getTemp() + 'C'}"></h1>
+<h1 th:text="${'Clouds: ' + weather.getClouds().getAll() + '%'}"></h1>
 </body>
 </html>
