--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -25,7 +25,7 @@
         <input type="submit" value="register"><br/>
 
     </form>
-    <h3 th:if="${matchesPassword != null}" th:text="${matchesPassword ? 'You are registered' : 'You are not registered'}"></h3>
+    <h3  th:text="${error}"></h3>
     <br/>
 
 
