--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -3,181 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Menu</title>
+
+    <!--Menu CSS-->
+    <link th:href="@{/css/app_menu.css}" rel="stylesheet">
+
 </head>
-<style>
-    @import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
-    @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
-
-    body{
-        margin: 0;
-        padding: 0;
-        background: #fff;
-        color: #fff;
-        font-family: Arial;
-        font-size: 12px;
-    }
-
-    .body{
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        right: 0px;
-        bottom: 0px;
-        width: auto;
-        height: auto;
-        background-image: url(https://assets.kenticocloud.com/c8286d4d-bff3-4363-913b-3483d8372a70/800eebd3-d173-47d5-9fde-ffc8632a2c37/Krakow.jpg);
-        background-size: cover;
-        -webkit-filter: blur(5px);
-        z-index: 0;
-    }
-
-    .grad{
-        position: absolute;
-        top: 100%;
-        left: 100%;
-        right: 100%;
-        bottom: 100%;
-        width: auto;
-        height: auto;
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-        z-index: 1;
-        opacity: 0.7;
-    }
-
-    .header{
-        position: absolute;
-        top: calc(20px);
-        left: calc(50% - 300px);
-        z-index: 2;
-    }
-
-    .header div{
-        float: left;
-        color: #f8f3ff;
-        font-family: 'Exo', sans-serif;
-        font-size: 40px;
-        font-weight: 200;
-        text-shadow: -1px 0 black, 0 2px black,
-       2px 0 black, 0 -1px black
-    }
-
-    .header div span{
-        color: #5379fa !important;
-    }
-
-    .login{
-        position: absolute;
-        top: calc(60px);
-        left: calc(130px);
-        height: 150px;
-        width: 350px;
-        padding: 10px;
-        z-index: 2;
-        font-family: 'Exo', sans-serif;
-        font-size: 13px;
-    }
-
-    .login input[type=text]{
-        width: 250px;
-        height: 30px;
-        background: transparent;
-        border: 1px solid rgba(0, 0, 0, 0.79);
-        border-radius: 3px;
-        color: #fff;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 4px;
-        margin-top: 10px;
-    }
-
-    .login input[type=password]{
-        width: 250px;
-        height: 30px;
-        background: transparent;
-        border: 1px solid rgba(0, 0, 0, 0.79);
-        border-radius: 3px;
-        color: #fff;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 4px;
-        margin-top: 10px;
-    }
-
-    .login input[type=submit]{
-        width: 260px;
-        height: 35px;
-        background: #feffcd;
-        border: 2px solid #969549;
-        cursor: pointer;
-        border-radius: 4px;
-        color: #a18d6c;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 6px;
-        margin-top: 10px;
-    }
-
-    .login input[type=submit]:hover{
-        opacity: 0.8;
-    }
-
-    .login input[type=submit]:active{
-        opacity: 0.6;
-    }
-
-    .login input[type=text]:focus{
-        outline: none;
-        border: 1px solid rgba(255,255,255,0.9);
-    }
-
-    .login input[type=password]:focus{
-        outline: none;
-        border: 1px solid rgba(255,255,255,0.9);
-    }
-
-    .login input[type=submit]:focus{
-        outline: none;
-    }
-
-    ::-webkit-input-placeholder{
-        color: rgba(255,255,255,0.6);
-    }
-
-    ::-moz-input-placeholder{
-        color: rgba(255,255,255,0.6);
-    }
-</style>
 <body>
 
-<div>
-    <div class="body"></div>
-    <div class="grad"></div>
-    <div class="header">
-        <div>Welcome to my OrganizerApp</div>
-    </div>
-    <div class="login">
-    <div> Login </div>
-    <form action="/user/login" method="post" th:object="${logUser}">
-        <input type="text" th:field="*{login}" placeholder="Name"> <br/>
-        <input type="password" th:field="*{password}" placeholder="Password"> <br/>
-        <input type="submit" value="login"><br/>
-    </form><br/>
-    <div> Registration </div>
-    <form action="/user/registry" method="post" th:object="${regUser}">
-        <p th:errors="*{login}"></p>
-        <input type="text" th:field="*{login}" placeholder="Name"> <br/>
-        <input type="password" th:field="*{password}" placeholder="Password"><br/>
-        <input type="password" th:field="*{passwordRepeat}" placeholder="Password repeat"><br/>
-        <input type="text" th:field="*{city}" placeholder="City"><br/>
-        <input type="text" th:field="*{postCode}" placeholder="Post Code"><br/>
-        <input type="submit" value="register"><br/>
+<div class="background-image"></div>
 
-    </form>
+<div class="body">
+
+
+    <div class="login">
+        <div class="header">
+            <div style="font-size: 25px">Welcome to my OrganizerApp</div>
+        </div>
+        <div>
+        Login
+        <form action="/user/login" method="post" th:object="${logUser}">
+            <input type="text" th:field="*{login}" placeholder="Name"> <br/>
+            <input type="password" th:field="*{password}" placeholder="Password"> <br/>
+            <input type="submit" value="login"><br/>
+        </form><br/>
+        Registration
+        <form action="/user/registry" method="post" th:object="${regUser}">
+            <p th:errors="*{login}"></p>
+            <input type="text" th:field="*{login}" placeholder="Name"> <br/>
+            <input type="password" th:field="*{password}" placeholder="Password"><br/>
+            <input type="password" th:field="*{passwordRepeat}" placeholder="Password repeat"><br/>
+            <input type="text" th:field="*{city}" placeholder="City"><br/>
+            <input type="text" th:field="*{postCode}" placeholder="Post Code"><br/>
+            <input type="submit" value="register">
+            <div class="info" th:text="${error}">
+            </div>
+
+        </form>
+        </div>
     </div>
-    <h3 th:text="${error}"></h3>
+
     <br/>
 
 
