--- a/src/main/resources/static/css/app_dashboard.css
+++ b/src/main/resources/static/css/app_dashboard.css
@@ -69,14 +69,13 @@ body{
     color: #5379fa !important;
 }
 
-.login{
-    height: 670px;
-    width: 260px;
-    margin-left: 50%;
+.notes{
+    height: auto;
+    width: 100%;
+    margin-left: 5%;
     margin-top: 150px;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 5%;
+    padding-left: 10px;
+    padding-right: 10px;
     background: rgba(0, 0, 0, 0.58);
     border-radius: 25px;
     box-shadow: 0px 30px 40px rgba(0, 0, 0, 0);
@@ -84,7 +83,7 @@ body{
 
 }
 
-.login div{
+.notes div{
     font-family: 'Exo', sans-serif;
     font-size: 16px;
 
@@ -94,7 +93,44 @@ body{
     margin-top: 30px;
     text-align: center;
 }
-.login input[type=text]{
+.notes input[type=text]{
+     width: 250px;
+     height: 30px;
+     background: transparent;
+     border: 1px solid rgb(255, 255, 255);
+     border-radius: 3px;
+     color: #fff;
+     font-family: 'Exo', sans-serif;
+     font-size: 16px;
+     padding: 4px;
+     margin-top: 10px;
+ }
+
+.notes form{
+    padding: 0;
+    width: 100%;
+    height: auto;
+}
+
+.notes li{
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Exo', sans-serif;
+}
+
+.notes input[type=date]{
+    width: 250px;
+    height: 30px;
+    background: transparent;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 3px;
+    color: #fff;
+    font-family: 'Exo', sans-serif;
+    font-size: 16px;
+    padding: 4px;
+    margin-top: 10px;
+}
+.notes input[type=number]{
     width: 250px;
     height: 30px;
     background: transparent;
@@ -107,7 +143,7 @@ body{
     margin-top: 10px;
 }
 
-.login input[type=password]{
+.notes input[type=password]{
     width: 250px;
     height: 30px;
     background: transparent;
@@ -120,7 +156,7 @@ body{
     margin-top: 10px;
 }
 
-.login input[type=submit]{
+.notes input[type=submit]{
     width: 260px;
     height: 35px;
     background: rgba(252, 250, 255, 0.81);
@@ -134,25 +170,25 @@ body{
     margin-top: 10px;
 }
 
-.login input[type=submit]:hover{
+.notes input[type=submit]:hover{
     opacity: 0.8;
 }
 
-.login input[type=submit]:active{
+.notes input[type=submit]:active{
     opacity: 0.6;
 }
 
-.login input[type=text]:focus{
+.notes input[type=text]:focus{
     outline: none;
     border: 1px solid rgba(255,255,255,0.9);
 }
 
-.login input[type=password]:focus{
+.notes input[type=password]:focus{
     outline: none;
     border: 1px solid rgba(255,255,255,0.9);
 }
 
-.login input[type=submit]:focus{
+.notes input[type=submit]:focus{
     outline: none;
 }
 
