--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,32 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
+
+    <link th:href="@{/css/app_dashboard.css}" rel="stylesheet">
+
 </head>
 <body>
+<div class="background-image"></div>
+
+<div class="body">
 
 <div style="text-align: center">
     <a href="/user/logout">Log out</a>
 
-    <ul>
-        <li th:each="note : ${noteList}" style="list-style: none">
-            <span th:text="${'Title: ' + note.getTitle() + ' Message: ' + note.getMessage()}"></span>
-            <span th:style="${note.getDueDate().isAfter(currentDate) ? 'color: green' : 'color: red'}"
-                  th:text="${' Due date: ' + #temporals.format(note.getDueDate(), 'dd-MM-yyyy')}"></span>
-            <a th:href="@{'/user/dashboard/deletenote/'+ ${note.getId()}}"> delete note</a>
-        </li>
-    </ul>
-    <form action="/user/dashboard/addnote" method="post" th:object="${note}">
-        <input type="text" th:field="*{title}" placeholder="title">
-        <input type="text" th:field="*{message}" placeholder="message">
-        <input type="date" th:field="*{dueDate}" placeholder="due date">
-        <input type="number" th:field="*{priority}" placeholder="priority">
-        <input type="submit" vale="add note"> <br> <br>
-    </form>
+    <div class="notes">
+        <ul>
+            <li th:each="note : ${noteList}" style="list-style: none">
+                <span th:text="${'Title: ' + note.getTitle() + ' Message: ' + note.getMessage()}"></span>
+                <span th:style="${note.getDueDate().isAfter(currentDate) ? 'color: green' : 'color: red'}"
+                      th:text="${' Due date: ' + #temporals.format(note.getDueDate(), 'dd-MM-yyyy')}"></span>
+                <a th:href="@{'/user/dashboard/deletenote/'+ ${note.getId()}}"> delete note</a>
+            </li>
+        </ul>
+        <form action="/user/dashboard/addnote" method="post" th:object="${note}">
+            <input type="text" th:field="*{title}" placeholder="title">
+            <input type="text" th:field="*{message}" placeholder="message">
+            <input type="date" th:field="*{dueDate}" placeholder="due date">
+            <input type="number" th:field="*{priority}" placeholder="priority">
+            <input type="submit" value="Add note"> <br> <br>
+        </form>
+    </div>
+
+
+
+
 
     <h1 th:text="${'Weather for: ' + city}"></h1>
     <h1 th:text="${'Temp: ' + weather.getTempDto().getTemp() + 'C'}"></h1>
     <h1 th:text="${'Clouds: ' + weather.getClouds().getAll() + '%'}"></h1>
 </div>
 
+</div>
 </body>
 </html>
