"adding weather to css"

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -17,6 +17,24 @@
     <a href="/user/logout">Log out</a>
     <i class="fas fa-undo"></i>
     <div class="notes">
+            <div class="weather">
+                <td>
+                    <span th:switch="${weather.getClouds().getCloudsState()}">
+                        <span th:case="'someClouds'">
+                            <img class="img-fluid" src="https://image.flaticon.com/icons/svg/128/128780.svg">
+                        </span>
+                        <span th:case="'clouds'">
+                            <img class="img-fluid" src="https://image.flaticon.com/icons/svg/128/128751.svg">
+                        </span>
+                        <span th:case="'noClouds'">
+                            <img class="img-fluid" src="https://image.flaticon.com/icons/svg/128/128781.svg">
+                        </span>
+
+                    </span>
+                </td>
+                <h1 th:text="${'Weather for: ' + city}"></h1>
+                <h2 th:text="${'Temp: ' + weather.getTempDto().getTemp() + 'C'}"></h2>
+            </div>
         <div class="table">
             <div class="tr-head">
                 <span style="text-align: left" class="td">Title</span>
@@ -46,9 +64,7 @@
 
 
 
-    <h1 th:text="${'Weather for: ' + city}"></h1>
-    <h1 th:text="${'Temp: ' + weather.getTempDto().getTemp() + 'C'}"></h1>
-    <h1 th:text="${'Clouds: ' + weather.getClouds().getAll() + '%'}"></h1>
+
 </div>
 
 </div>
