--- a/src/main/resources/static/css/app_dashboard.css
+++ b/src/main/resources/static/css/app_dashboard.css
@@ -71,11 +71,8 @@ body{
 
 .notes{
     width: fit-content;
-    margin: 0 auto;
-    margin-top: 150px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 2%;
+    margin: 150px auto 0;
+    padding: 10px 10px 20px 10px;
     background: rgba(0, 0, 0, 0.58);
     border-radius: 25px;
     box-shadow: 0px 30px 40px rgba(0, 0, 0, 0);
@@ -92,6 +89,20 @@ DIV.notes {
 .info{
     margin-top: 30px;
     text-align: center;
+}
+
+.weather{
+    width: 14%;
+    height: 10%;
+    font-size: 8px;
+    text-align: center;
+    margin:0 auto;
+}
+
+
+TD.weather{
+    width: 10%;
+    height: 10%;
 }
 .notes input[type=text]{
      width: 200px;
