--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -34,6 +34,7 @@
             <input type="password" th:field="*{passwordRepeat}" placeholder="Password repeat"><br/>
             <input type="text" th:field="*{city}" placeholder="City"><br/>
             <input type="text" th:field="*{postCode}" placeholder="Post Code"><br/>
+            <input type="text" th:field="*{phoneNumber}" placeholder="Phone Number"><br/>
             <input type="submit" value="register">
             <div class="info" th:text="${error}">
             </div>
