--- a/src/main/resources/static/css/app_dashboard.css
+++ b/src/main/resources/static/css/app_dashboard.css
@@ -86,24 +86,7 @@ DIV.notes {
 
 }
 
-.info{
-    margin-top: 30px;
-    text-align: center;
-}
 
-.weather{
-    width: 14%;
-    height: 10%;
-    font-size: 8px;
-    text-align: center;
-    margin:0 auto;
-}
-
-
-TD.weather{
-    width: 10%;
-    height: 10%;
-}
 .notes input[type=text]{
      width: 200px;
      height: 30px;
@@ -209,6 +192,42 @@ SPAN.td-form
 
 .notes input[type=submit]:focus{
     outline: none;
+}
+.info{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.weather{
+    width: 14%;
+    height: 10%;
+    font-size: 8px;
+    text-align: center;
+    margin:0 auto;
+}
+
+
+TD.weather{
+    width: 10%;
+    height: 10%;
+}
+
+.user{
+    width: 40%;
+    height: 100%;
+    margin-top: 10px;
+    margin-left: 10px;
+    text-align: left;
+    float: left;
+
+}
+.log{
+    width: 40%;
+    height: 100%;
+    margin-top: 10px;
+    margin-right: 10px;
+    float: right;
+    text-align: right;
 }
 
 ::-webkit-input-placeholder{
